--- a/src/freenet/clients/http/staticfiles/freenetjs/CD189673D907CA081E674F76DB98AEE7.cache.html
+++ b/src/freenet/clients/http/staticfiles/freenetjs/CD189673D907CA081E674F76DB98AEE7.cache.html
@@ -4,7 +4,7 @@ var $gwt_version = "2.0.1";
 var $wnd = parent;
 var $doc = $wnd.document;
 var $moduleName, $moduleBase;
-var $strongName = '481B5EDCD43A88EFE1ADCB86658CD469';
+var $strongName = 'CD189673D907CA081E674F76DB98AEE7';
 var $stats = $wnd.__gwtStatsEvent ? function(a) {return $wnd.__gwtStatsEvent(a);} : null,
 $sessionId = $wnd.__gwtStatsSessionId ? $wnd.__gwtStatsSessionId : null;
 $stats && $stats({moduleName:'freenetjs',sessionId:$sessionId,subSystem:'startup',evtGroup:'moduleStartup',millis:(new Date()).getTime(),type:'moduleEvalStart'});
@@ -3488,7 +3488,7 @@ function urlEncode(s){
   return sb.impl.string;
 }
 
-var cm = null, isDebug = false, isPushingCancelledExpected = false, keepaliveManager = null, logCounter = P0_longLit, requestId_0 = null;
+var cm = null, isDebug = true, isPushingCancelledExpected = false, keepaliveManager = null, logCounter = P0_longLit, requestId_0 = null;
 --></script>
 <script><!--
 function getClass_79(){
@@ -3530,6 +3530,7 @@ _ = KeepaliveManager.prototype = new Object_0;
 _.getClass$ = getClass_80;
 _.typeId$ = 0;
 _.cancelled = false;
+_.firstSuccess = false;
 function $clinit_165(){
   $clinit_165 = nullMethod;
   $clinit_82();
@@ -3575,7 +3576,13 @@ function onError(request, exception){
 }
 
 function onResponseReceived(request, response){
-  compareTo(response.val$xmlHttpRequest.responseText, 'SUCCESS') != 0 && $closeConnection(this.this$1.this$0);
+  if (compareTo(response.val$xmlHttpRequest.responseText, 'SUCCESS') != 0) {
+    !this.this$1.this$0.firstSuccess && (isPushingCancelledExpected = true);
+    $closeConnection(this.this$1.this$0);
+  }
+   else {
+    this.this$1.this$0.firstSuccess = true;
+  }
 }
 
 function KeepaliveManager$KeepaliveTimer$1(){
