--- a/src/freenet/clients/http/staticfiles/freenetjs/9D5FCF6E428F9DC079D8AADAC2A62896.cache.html
+++ b/src/freenet/clients/http/staticfiles/freenetjs/9D5FCF6E428F9DC079D8AADAC2A62896.cache.html
@@ -4,7 +4,7 @@ var $gwt_version = "2.0.1";
 var $wnd = parent;
 var $doc = $wnd.document;
 var $moduleName, $moduleBase;
-var $strongName = 'C3A49A825E74BC7438F6F16B6BD9A606';
+var $strongName = '9D5FCF6E428F9DC079D8AADAC2A62896';
 var $stats = $wnd.__gwtStatsEvent ? function(a) {return $wnd.__gwtStatsEvent(a);} : null,
 $sessionId = $wnd.__gwtStatsSessionId ? $wnd.__gwtStatsSessionId : null;
 $stats && $stats({moduleName:'freenetjs',sessionId:$sessionId,subSystem:'startup',evtGroup:'moduleStartup',millis:(new Date()).getTime(),type:'moduleEvalStart'});
@@ -3437,7 +3437,7 @@ function urlEncode(s){
   return sb.impl.string;
 }
 
-var cm = null, isDebug = false, isPushingCancelledExpected = false, keepaliveManager = null, logCounter = P0_longLit, requestId_0 = null;
+var cm = null, isDebug = true, isPushingCancelledExpected = false, keepaliveManager = null, logCounter = P0_longLit, requestId_0 = null;
 function getClass_78(){
   return Lfreenet_client_FreenetJs$1_2_classLit;
 }
@@ -3477,6 +3477,7 @@ _ = KeepaliveManager.prototype = new Object_0;
 _.getClass$ = getClass_79;
 _.typeId$ = 0;
 _.cancelled = false;
+_.firstSuccess = false;
 function $clinit_164(){
   $clinit_164 = nullMethod;
   $clinit_81();
@@ -3524,7 +3525,13 @@ function onError(request, exception){
 }
 
 function onResponseReceived(request, response){
-  compareTo(response.val$xmlHttpRequest.responseText, 'SUCCESS') != 0 && $closeConnection(this.this$1.this$0);
+  if (compareTo(response.val$xmlHttpRequest.responseText, 'SUCCESS') != 0) {
+    !this.this$1.this$0.firstSuccess && (isPushingCancelledExpected = true);
+    $closeConnection(this.this$1.this$0);
+  }
+   else {
+    this.this$1.this$0.firstSuccess = true;
+  }
 }
 
 function KeepaliveManager$KeepaliveTimer$1(){
